playwright-output.txt
npm warn Unknown env config "devdir". This will stop working in the next major version of npm.
[global-setup] Better Auth test setup ready

Running 44 tests using 1 worker

(node:49102) Warning: The 'NO_COLOR' env is ignored due to the 'FORCE_COLOR' env being set.
(Use `node --trace-warnings ...` to show where the warning was created)
(node:49102) Warning: The 'NO_COLOR' env is ignored due to the 'FORCE_COLOR' env being set.
(Use `node --trace-warnings ...` to show where the warning was created)
  ✓   1 [desktop] › tests/e2e/analytics.spec.ts:14:7 › analytics page › analytics page renders heading and subtitle (2.2s)
  ✓   2 [desktop] › tests/e2e/analytics.spec.ts:19:7 › analytics page › date range filter buttons are visible (1.6s)
  ✓   3 [desktop] › tests/e2e/analytics.spec.ts:26:7 › analytics page › summary section is visible with stat labels (1.7s)
  ✓   4 [desktop] › tests/e2e/analytics.spec.ts:33:7 › analytics page › Export Data button opens export modal (1.7s)
  ✓   5 [desktop] › tests/e2e/analytics.spec.ts:39:7 › analytics page › export modal closes on cancel (1.7s)
  ✓   6 [desktop] › tests/e2e/analytics.spec.ts:46:7 › analytics page › Custom date range button shows date inputs (1.7s)
  ✓   7 [desktop] › tests/e2e/ask-ai.spec.ts:25:7 › ask AI feature › AskAI input and Ask button are visible on entry editor (2.8s)
  ✓   8 [desktop] › tests/e2e/ask-ai.spec.ts:30:7 › ask AI feature › Ask button is disabled when input is empty (4.2s)
  ✓   9 [desktop] › tests/e2e/ask-ai.spec.ts:34:7 › ask AI feature › Ask button enables when input has text (2.7s)
  ✓  10 [desktop] › tests/e2e/ask-ai.spec.ts:39:7 › ask AI feature › submitting a question shows AI response section (6.7s)
  ✓  11 [desktop] › tests/e2e/ask-ai.spec.ts:45:7 › ask AI feature › Clear button removes AI response (5.9s)
  ✓  12 [desktop] › tests/e2e/auth.spec.ts:9:7 › authentication › unauthenticated user is redirected from /journal to sign-in (366ms)
  ✓  13 [desktop] › tests/e2e/auth.spec.ts:14:7 › authentication › sign-in with valid credentials redirects to /journal (1.1s)
  ✓  14 [desktop] › tests/e2e/auth.spec.ts:20:7 › authentication › sign-out clears session and redirects away from dashboard (1.1s)
  ✓  15 [desktop] › tests/e2e/journal.spec.ts:13:7 › journal CRUD › journal page renders greeting and FAB button (1.2s)
  ✓  16 [desktop] › tests/e2e/journal.spec.ts:18:7 › journal CRUD › clicking FAB creates an entry and navigates to editor (2.0s)
  ✓  17 [desktop] › tests/e2e/journal.spec.ts:24:7 › journal CRUD › editor shows Save and Delete buttons (2.1s)
  ✓  18 [desktop] › tests/e2e/journal.spec.ts:31:7 › journal CRUD › editor shows disabled Dictate button (2.4s)
  ✓  19 [desktop] › tests/e2e/journal.spec.ts:39:7 › journal CRUD › editor shows back navigation link (2.0s)
  ✓  20 [desktop] › tests/e2e/journal.spec.ts:45:7 › journal CRUD › Save button persists content and shows saved confirmation (2.7s)
  ✓  21 [desktop] › tests/e2e/journal.spec.ts:57:7 › journal CRUD › entry card appears on journal page after saving (3.2s)
  ✓  22 [desktop] › tests/e2e/journal.spec.ts:73:7 › journal CRUD › back link navigates to journal list (2.7s)
  ✓  23 [desktop] › tests/e2e/journal.spec.ts:81:7 › journal CRUD › Cmd+S keyboard shortcut saves entry (2.7s)
  ✓  24 [desktop] › tests/e2e/journal.spec.ts:93:7 › journal CRUD › delete entry removes it from the list (4.4s)
  ✓  25 [desktop] › tests/e2e/navigation.spec.ts:18:7 › navigation › sidebar shows brand name and all nav links (1.0s)
  ✓  26 [desktop] › tests/e2e/navigation.spec.ts:25:7 › navigation › Analytics link navigates to /analytics (1.9s)
  ✓  27 [desktop] › tests/e2e/navigation.spec.ts:31:7 › navigation › History link navigates to /history (1.9s)
  ✓  28 [desktop] › tests/e2e/navigation.spec.ts:36:7 › navigation › Journal link navigates to /journal (2.4s)
  ✓  29 [desktop] › tests/e2e/navigation.spec.ts:43:7 › navigation › ← Journal link in editor navigates back to journal list (2.7s)
  ✓  30 [desktop] › tests/e2e/responsive.spec.ts:9:7 › landing page — mobile (390px) › hero text is visible (381ms)
  ✓  31 [desktop] › tests/e2e/responsive.spec.ts:15:7 › landing page — mobile (390px) › Start tracking CTA is visible (321ms)
  ✓  32 [desktop] › tests/e2e/responsive.spec.ts:20:7 › landing page — mobile (390px) › no horizontal overflow (314ms)
  ✓  33 [desktop] › tests/e2e/responsive.spec.ts:32:7 › landing page — desktop (1280px) › hero text and image are both visible (378ms)
  ✓  34 [desktop] › tests/e2e/responsive.spec.ts:38:7 › landing page — desktop (1280px) › nav links are visible (376ms)
  ✓  35 [desktop] › tests/e2e/responsive.spec.ts:45:7 › landing page — desktop (1280px) › no horizontal overflow (343ms)
  ✓  36 [desktop] › tests/e2e/responsive.spec.ts:67:7 › dashboard layout — mobile (390px) › bottom nav is visible with all three tabs (972ms)
  ✓  37 [desktop] › tests/e2e/responsive.spec.ts:77:7 › dashboard layout — mobile (390px) › desktop sidebar is NOT visible (987ms)
  ✓  38 [desktop] › tests/e2e/responsive.spec.ts:83:7 › dashboard layout — mobile (390px) › FAB button exists and is positioned in lower portion of screen (1.1s)
  ✓  39 [desktop] › tests/e2e/responsive.spec.ts:93:7 › dashboard layout — mobile (390px) › no horizontal overflow on journal page (971ms)
  ✓  40 [desktop] › tests/e2e/responsive.spec.ts:112:7 › dashboard layout — desktop (1280px) › sidebar is visible with brand name (1.0s)
  ✓  41 [desktop] › tests/e2e/responsive.spec.ts:119:7 › dashboard layout — desktop (1280px) › bottom nav is NOT visible (1.2s)
  ✓  42 [desktop] › tests/e2e/responsive.spec.ts:131:7 › dashboard layout — desktop (1280px) › FAB button exists (1.1s)
  ✓  43 [desktop] › tests/e2e/responsive.spec.ts:135:7 › dashboard layout — desktop (1280px) › content area uses full available width (not narrow column) (1.0s)
  ✓  44 [desktop] › tests/e2e/responsive.spec.ts:144:7 › dashboard layout — desktop (1280px) › no horizontal overflow on journal page (1.0s)
[global-teardown] cleaning up test data...
(node:49101) Warning: Failed to load the ES module: /Users/cyruskhiabani/Documents/GitHub/journal-ai-app/utils/schema.ts. Make sure to set "type": "module" in the nearest package.json file or use the .mjs extension.
(Use `node --trace-warnings ...` to show where the warning was created)
[global-teardown] db cleanup error (non-fatal): /Users/cyruskhiabani/Documents/GitHub/journal-ai-app/utils/schema.ts:1
import { pgTable, uuid, text, timestamp, boolean, pgEnum } from 'drizzle-orm/pg-core';
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at loadCJSModule (node:internal/modules/esm/translators:117:25)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:233:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:430:25)
    at onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:661:26)
    at deleteTestEntries (/Users/cyruskhiabani/Documents/GitHub/journal-ai-app/tests/e2e/helpers/db.ts:11:52)
    at globalTeardown (/Users/cyruskhiabani/Documents/GitHub/journal-ai-app/tests/e2e/global-teardown.ts:6:5)
    at Object.teardown [as setup] (/Users/cyruskhiabani/Documents/GitHub/journal-ai-app/node_modules/playwright/lib/runner/tasks.js:190:7)
    at taskLoop (/Users/cyruskhiabani/Documents/GitHub/journal-ai-app/node_modules/playwright/lib/runner/taskRunner.js:62:11)
    at TaskRunner.runDeferCleanup (/Users/cyruskhiabani/Documents/GitHub/journal-ai-app/node_modules/playwright/lib/runner/taskRunner.js:78:5)
    at TaskRunner.run (/Users/cyruskhiabani/Documents/GitHub/journal-ai-app/node_modules/playwright/lib/runner/taskRunner.js:43:28)
    at runTasks (/Users/cyruskhiabani/Documents/GitHub/journal-ai-app/node_modules/playwright/lib/runner/tasks.js:80:18)
    at runAllTestsWithConfig (/Users/cyruskhiabani/Documents/GitHub/journal-ai-app/node_modules/playwright/lib/runner/testRunner.js:388:18)
    at runTests (/Users/cyruskhiabani/Documents/GitHub/journal-ai-app/node_modules/playwright/lib/testActions.js:96:18)
    at i.<anonymous> (/Users/cyruskhiabani/Documents/GitHub/journal-ai-app/node_modules/playwright/lib/program.js:56:7)
[global-teardown] done

  44 passed (1.4m)
